# datamgmtnode

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
contracts/: ERC20Token.json
datamgmtnode/: compliance_manager.py  data_manager.py  evm_blockchain_interface.py  main.py  network.py  node.py
datamgmtnode/api/: dashboard_api.py  external_api.py  internal_api.py  rate_limiter.py  validation.py  websocket_handler.py
datamgmtnode/blockchain/: blockchain_interface.py  evm_blockchain_interface.py
datamgmtnode/dashboard/: __init__.py  event_bus.py
datamgmtnode/network/: p2p_network.py
datamgmtnode/services/: authorisation.py  compliance_manager.py  data_manager.py  key_manager.py  node.py  payment_processor.py  plugin_manager.py  token_manager.py
datamgmtnode/tui/: __init__.py  api_client.py  app.py
datamgmtnode/tui/screens/: __init__.py  compliance_screen.py  data_screen.py  health_screen.py  main_screen.py  network_screen.py  tokens_screen.py  transfers_screen.py
datamgmtnode/tui/styles/: app.tcss
datamgmtnode/tui/widgets/: __init__.py
documentation/: mkdocs.yml
documentation/docs/: index.md
documentation/docs/development/: architecture.md  contributing.md  (+3 more)
scripts/: build_dashboard.py
tests/: conftest.py  test_api_validation.py  test_authorisation.py  test_compliance_manager.py  test_config.py  test_data_manager.py  test_key_manager.py  test_p2p_network.py  test_payment_processor.py  test_rate_limiter.py  test_token_manager.py
web/: index.html  package.json  tailwind.config.js  vite.config.js
web/src/: App.vue  style.css
(+29 files in other folders)
