[tool.poetry]
name = "datamgmtnode"
version = "0.1.0"
description = ""
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
cryptography = "^43.0.0"
web3 = "^6.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
