[tool.poetry]
name = "datamgmtnode"
version = "0.1.0"
description = "Decentralized enterprise data management and sharing system"
authors = ["Dipankar Sarkar <me@dipankar.name>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncio = "^3.4.3"
cryptography = "^43.0.0"
web3 = "^6.20.1"
aiohttp = "^3.9.0"
plyvel = "^1.5.0"
python-dotenv = "^1.0.0"
kademlia = "^2.2.3"
textual = "^0.47.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5"
mkdocs-material = "^9.5"
pymdown-extensions = "^10.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
